--- a/app/src/main/res/layout/mood_card.xml
+++ b/app/src/main/res/layout/mood_card.xml
@@ -4,18 +4,20 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="8dp"
-    android:layout_marginHorizontal="8dp"
-    android:padding="10dp">
+    android:layout_marginHorizontal="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="10dp">
         
         <TextView
-            android:id="@+id/mood_id"
+            android:id="@+id/mood_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" 
-            android:text="ID"
+            android:text="Mood Here"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif-light"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
         
@@ -24,7 +26,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Entry Here"
-            app:layout_constraintTop_toBottomOf="@id/mood_id"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif-light"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/mood_value"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
@@ -32,6 +37,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Log Here"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif-light"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/mood_entry"
             app:layout_constraintStart_toStartOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
